# rocket_diesel

./: Cargo.toml  README.md  diesel.toml
migrations/2018-09-04-070406_create_tags/: up.sql
migrations/2018-09-04-070732_create_post_tag_rels/: down.sql  up.sql
migrations/2018-09-04-071917_create_comments/: down.sql  up.sql
src/: main.rs
src/controllers/: controller.rs  mod.rs  msg_controller.rs  post_controller.rs
src/databases/: models.rs  schema.rs
