[package]
name = "rocket-start"
version = "0.1.0"
authors = ["ryota suzuki <ryota@fringe81.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "*"
